--- a/index.html
+++ b/index.html
@@ -20,35 +20,92 @@
 
 </head>
 <body>
-<h1>Humani Tech</h1>
-<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <!--<a class="navbar-brand" href="#">Brand</a>-->
-    </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="active"><a id="current-tab" href="#">Home<span class="sr-only">(current)</span></a></li>
-            <li class="fade-on-hover"><a href="./team.html">Meet the Team</a></li>
-            <li class="fade-on-hover"><a href="./projects.html">Projects</a></li>
-            <li class="fade-on-hover"><a href="./join.html">Join</a></li>
-            <li class="fade-on-hover"><a href="./contact.html">Contact</a></li>
-            <!--<li><a href="#">Contact</a></li>-->
-        </ul>
-    </div><!-- /.navbar-collapse -->
-</div><!-- /.container-fluid -->
+<div id="main-banner-image"></div>
+<div id="header-push"></div>
+
+<!--<h1>Humani Tech</h1>-->
+<div id="content">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <!--<a class="navbar-brand" href="#">Brand</a>-->
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a id="current-tab" href="#">Home<span class="sr-only">(current)</span></a></li>
+                <!--<li class="fade-on-hover"><a href="./team.html">Meet the Team</a></li>-->
+                <li class="fade-on-hover"><a href="./projects.html">Projects</a></li>
+                <li class="fade-on-hover"><a href="./join.html">Join</a></li>
+                <li class="fade-on-hover"><a href="./contact.html">Contact</a></li>
+                <!--<li><a href="#">Contact</a></li>-->
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="container-fluid">
+                <h1>Humani-Tech</h1>
+                <h2>Who are we?</h2>
+                <p>We are a club in the College of Computing at The Georgia Institute of Technology that connects
+                    Computer Science students with non-profits in need of technical skills.
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div id="carousel0" class="carousel" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel0" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel0" data-slide-to="1"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img class="img-responsive img-rounded" src="./images/Ht3.jpg"
+                             width="100%">
+                    </div>
+
+                    <div class="item">
+                        <img class="img-responsive img-rounded" src="./images/Ht2.jpg" width="100%">
+                    </div>
+
+                    <div class="item">
+                        <img class="img-responsive img-rounded" src="./images/Ht1.jpg" width="100%">
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#carousel0" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel0" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
 
 
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script>$('.carousel').carousel({
+    interval: false
+});
+</script>
