--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Projects</title>
+    <link rel="shortcut icon" type="image/png" href="./images/Favicon.png"/>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" media="none"
+          onload="if(media!='all')media='all'">
+    <noscript>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    </noscript>
+
+    <link rel="stylesheet" href="./CSS/style.css" media="none" onload="if(media!='all')media='all'">
+    <noscript>
+        <link rel="stylesheet" href="./CSS/style.css">
+    </noscript>
+
 </head>
 <body>
 
+<div id="main-banner-image"></div>
+<div id="header-push"></div>
+
+<!--<h1>Humani Tech</h1>-->
+<div id="content">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <!--<a class="navbar-brand" href="#">Brand</a>-->
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="./index.html">Home</a></li>
+                <!--<li class="fade-on-hover"><a href="./team.html">Meet the Team</a></li>-->
+                <li class="active"><a id="current-tab" href="#">Projects<span class="sr-only">(current)</span></a></li>
+                <li class="fade-on-hover"><a href="./join.html">Join</a></li>
+                <li class="fade-on-hover"><a href="./contact.html">Contact</a></li>
+                <!--<li><a href="#">Contact</a></li>-->
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="container-fluid">
+                <h1>Current Projects</h1>
+                <h2>Insert Project name</h2>
+                <p>Some sort of project description
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
