--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="./index.html">Home</a></li>
+                <li class="fade-on-hover"><a href="./index.html">Home</a></li>
                 <!--<li class="fade-on-hover"><a href="./team.html">Meet the Team</a></li>-->
                 <li class="active"><a id="current-tab" href="#">Projects<span class="sr-only">(current)</span></a></li>
                 <li class="fade-on-hover"><a href="./join.html">Join</a></li>
